# eeprom-util

./: .gitignore  LICENSE.txt  Makefile  README.md  command.h  common.h  demo.c  eeprom.c  eeprom.h  field.c  field.h  field1.c  hal.c  hal.h  layout.c  layout.h  libjson.c  linux_api.c  main.c  meson.build  meson_options.txt  parsing_libjson.c  parsing_libjson.h  test.c  util.c  util.h
.github/workflows/: meson.yml
include/: eeprom.h  field.h  hal.h  layou.h
layout/: layout-v1.json  layout-v5.json
tools/: command.c  command.h  eeprom-util.c  meson.build
